[gd_scene load_steps=17 format=2]

[ext_resource path="res://script/Button.gd" type="Script" id=1]
[ext_resource path="res://scene/toGame.gd" type="Script" id=2]
[ext_resource path="res://sound/in_game.wav" type="AudioStream" id=3]
[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://font30.tres" type="DynamicFont" id=5]
[ext_resource path="res://script/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://script/Game.gd" type="Script" id=7]
[ext_resource path="res://scene/boats_placing.tscn" type="PackedScene" id=8]
[ext_resource path="res://script/RichTextLabel.gd" type="Script" id=9]
[ext_resource path="res://scene/TchatRoom.tscn" type="PackedScene" id=10]
[ext_resource path="res://script/ReturnToMenu.gd" type="Script" id=11]
[ext_resource path="res://scene/Actual player.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0509804, 0, 0.215686, 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 7 )

[node name="Joueurs" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="UI"]
position = Vector2( 640, 360 )
current = true
smoothing_enabled = true
editor_draw_limits = true
script = ExtResource( 6 )

[node name="boats_placing" parent="UI" instance=ExtResource( 8 )]
margin_left = -272.0
margin_right = 6.0

[node name="toGame" type="Button" parent="UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -228.733
margin_top = 184.068
margin_right = -31.7334
margin_bottom = 276.068
custom_colors/font_color = Color( 1, 0, 0, 1 )
disabled = true
text = "Not Ready"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="UI"]
visible = false
margin_left = 26.0
margin_top = 70.0
margin_right = 181.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.258824, 0.694118, 0.243137, 1 )
text = "Fin tour"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actual player" type="Label" parent="UI"]
visible = false
margin_left = 17.0
margin_top = 22.0
margin_right = 1250.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
text = "Joueur Actuel:"
script = ExtResource( 12 )

[node name="Temps restant" type="RichTextLabel" parent="UI"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -447.822
margin_top = 81.2986
margin_right = -262.822
margin_bottom = 130.299
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cache" type="Panel" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Cache"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 6
text = "Chargement..."
align = 1
valign = 1

[node name="GameEnd" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
color = Color( 0.0509804, 0.0235294, 0.168627, 0.894118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/GameEnd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.5
margin_top = -63.5
margin_right = 258.5
margin_bottom = 63.5
custom_fonts/font = ExtResource( 5 )
text = "Partie Termin√©e"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToMenu" type="Button" parent="UI"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -176.0
margin_right = -28.0
margin_bottom = -84.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Return to Menu"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opt" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.0235294, 0.168627, 0.894118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lose" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.0235294, 0.168627, 0.894118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.0235294, 0.168627, 0.894118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 3 )
autoplay = true

[node name="CanvasLayer" parent="." instance=ExtResource( 10 )]
[connection signal="pressed" from="UI/toGame" to="UI/toGame" method="_on_toGame_pressed"]
[connection signal="pressed" from="UI/EndTurn" to="UI/EndTurn" method="_on_Button_pressed"]
[connection signal="visibility_changed" from="UI/Temps restant" to="UI/Temps restant" method="_on_Temps_restant_visibility_changed"]
[connection signal="pressed" from="UI/ReturnToMenu" to="UI/ReturnToMenu" method="_on_ReturnToMenu_pressed"]
[connection signal="finished" from="UI/music" to="." method="_on_AudioStreamPlayer_finished"]
